DEMO-133: fixed grid layout and styles; fixed typeahead hint shifting; font size of data selection is decreased

--- a/src/assets/styles/scott.css
+++ b/src/assets/styles/scott.css
@@ -27,13 +27,8 @@ body {
   background-color: #F2F5F8;
   color: #333333;
 }
-
 .navbar-header,.navbar-fixed-top {
   border-width: 0;
-  margin-left:  -15px;
-  margin-right: -15px;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
 .navbar-default {
@@ -80,15 +75,13 @@ body {
   text-transform: uppercase;
 }
 
-.flight-info{
+.flight-info {
   background-color: #004a99;
   /*box-shadow: 0 2px 0 0 rgba(0, 22, 102, 0.2);*/
   line-height: 1.5;
   letter-spacing: 0.1px;
   color: #ffffff;
   margin-top: -2px;
-  /*margin-left:  -15px;*/
-  /*margin-right: -15px;*/
   padding: 5px;
   padding-top: 10px;
   height: 60px;
@@ -130,9 +123,6 @@ body {
 
 .text-spacer {
   padding-left:  20px;
-}
-.tiles.row {
-  margin-left: 0;
 }
 
 .mycustomtab {
@@ -325,11 +315,6 @@ body.loading .modal {
   display: block;
 }
 
-.container-fluid {
-  margin: 0;
-  padding: 0;
-}
-
 .flight-type-form>.row, .flight-direction>.row{
   margin: 0;
   padding: 0;
@@ -365,10 +350,6 @@ body.loading .modal {
   height: 222px;
   background-color: #004a99;
   box-shadow: 0 2px 0 0 rgba(0, 74, 153, 0.2);
-}
-
-.container {
-  padding: 0;
 }
 
 .flight-direction-item {
@@ -456,19 +437,8 @@ body.loading .modal {
 .flight-passengers-info-item, .flight-class-info-item {
   height: 50px;
   padding-top: 15px;
-  padding-left: 15px;
   text-transform: uppercase;
   border-bottom: 1px solid #F2F2F2;
-}
-
-.flight-passengers-info-item>div, .flight-class-info-item>div {
-  width: 50%;
-  float: left;
-}
-
-.flight-additional-info.row, .flight-date-info.row{
-  margin: 0;
-  padding: 0;
 }
 
 .flight-class-info-item>.text-picker, .flight-passengers-info-item>.text-picker {
@@ -507,7 +477,6 @@ body.loading .modal {
   letter-spacing: 0.1px;
   color: #ffffff;
   text-transform: uppercase;
-  padding-left: 15px;
 }
 
 /* Smart button styles */
@@ -542,6 +511,7 @@ body.loading .modal {
   color: #101742;
 }
 
+
 .search_button_top_cancel {
   border: 0;
   background-color: transparent;
@@ -570,7 +540,8 @@ body.loading .modal {
   border-radius: 0;
 }
 .tt-hint {
-  color: #999;
+  color: #999 !important;
+  padding: 0;
 }
 .tt-menu {
   background-color: #fff;
@@ -645,7 +616,7 @@ body.loading .modal {
 }
 
 #date_select p.header {
-  margin: 5px 0 0 10px;
+  margin: 0 10px 0 0;
   font-size: 14px;
   font-family: WhitneyHTF-MediumCondensed;
   text-transform: uppercase;
@@ -653,7 +624,7 @@ body.loading .modal {
   color: #6F738D;
 }
 #date_select p.info {
-  margin: 0 0 0 10px;
+  margin: 0 10px 0 0;
   font-family: WhitneyHTF-BookCondensed;
   font-size: 20px;
   letter-spacing: 0.2px;
@@ -662,7 +633,6 @@ body.loading .modal {
 .date_select-button {
   width: 80px;
   height: 40px;
-  margin: 10px;
   background-color: #ff2600;
   border-radius: 0;
   font-family: WhitneyHTF-BookCondensed;
